# rust-asap

./: .gitignore  Cargo.toml  README.md  pixi.toml
resources/doc/: README.md
resources/test/data/: DNAtaxData.nex.fasta  README.md  asv-listerria-taxon-Bacillales-Order.fasta.final_tree.fa  distance-matrix-Characidium.csv  sample.fasta-2line  sample.fasta-2line.un-eq-len  too_few_records.fa
src/: lib.rs  main.rs
src/core/: analysis.rs  io.rs  mod.rs  utils.rs
src/lib/: analysis.rs  core.rs  mod.rs
src/modes/: asap.rs  mod.rs
