[package]
name = "asap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bio = "2.0.3"
clap = { version = "4.4.11", features = ["derive"] }
duplicate = "1.0.0"
rayon = "1.10.0"
num-traits = "0.2.19"
log = "0.4.22"
simba = "0.9.0"
approx_eq = "0.1.8"
kodama = "0.3.0"
derivative = "2.2.0"
typed-builder = "0.20.0"
derive_builder = "0.20.2"
